Remove unnecessary observable logic in TransferTokensMapper